k3s-argocd-starter/infrastructure/networking/gateway/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GatewayClass
metadata:
  name: default
spec:
  controllerName: gateway-controller
