k3s-argocd-starter/infrastructure/networking/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: default
  listeners:
  - hostname: "*.example.com"
    port: 80
    protocol: HTTP
    routes:
      kind: HTTPRoute
